@@ -37,7 +37,7 @@ while (<DATA>) {
     $try = qq|\$x = $CLASS->new("$args[0]");|;
     if ($f eq "bnorm") {
         $try .= qq| \$x;|;
-    } elsif ($f =~ /^is_(zero|one|odd|even|negative|positive|nan|int)$/) {
+    } elsif ($f =~ /^is_(zero|one|odd|even||(non_)?(negative|positive)|nan|int)$/) {
         $try .= qq| \$x->$f();|;
     } elsif ($f eq "is_inf") {
         $try .= qq| \$x->is_inf("$args[1]");|;
@@ -2182,6 +2182,22 @@ NaN:0
 NaN:0
 -inf:1
 +inf:0
+
+&is_non_positive
+0:1
+1:0
+-1:1
+NaN:0
+-inf:1
++inf:0
+
+&is_non_negative
+0:1
+1:1
+-1:0
+NaN:0
+-inf:0
++inf:1
 
 &parts
 0:0 0
