@@ -3,7 +3,7 @@
 use strict;
 use warnings;
 
-use Test::More tests => 4026            # tests in require'd file
+use Test::More tests => 4038            # tests in require'd file
                          + 20;          # tests in this file
 
 use Math::BigInt only => 'Calc';
