@@ -3,7 +3,7 @@
 use strict;
 use warnings;
 
-use Test::More tests => 2196            # tests in require'd file
+use Test::More tests => 2208            # tests in require'd file
                          + 2;           # tests in this file
 
 use Math::BigInt upgrade => 'Math::BigFloat';
